Make Gateway API optional, bump Cilium
For Gateway API, it's been observed that this causes conflicts for users
that prefer to use other providers for Gateway API, so allow users to
disable Cilium's support for it entirely.  It's left to true by default
which mirrors the current behaviour.

Update Cilium as well to the next stable release, and the version of
Gateway API CRDs that it supports.
